# coding-challenges-2025

./: .pre-commit-config.yaml  .tool-versions  README.md
.github/workflows/: grpc-golang-pr.yml
grpc/golang/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  go.mod  go.sum  main.go  skaffold.yaml
grpc/golang/cmd/: client.go  root.go  server.go
grpc/golang/internal/client/: client.go  types.go
grpc/golang/internal/server/: grpc_server.go  grpc_server_test.go  server.go  types.go
grpc/golang/internal/store/: memory.go  redis.go  store.go  store_test.go
grpc/golang/manifests/: dev.yaml  redis.yaml  server.yaml
grpc/golang/proto/: users.pb.go  users.proto  users_grpc.pb.go
grpc/golang/scripts/: generate-certs.sh
kubernetes/custom-cni/: Dockerfile  Makefile  README.md  go.mod  go.sum  main.go  skaffold.yaml
kubernetes/custom-cni/k8s/: 00-customcni.conflist  daemonset.yaml
machine-learning/kuberay-mlflow/: Makefile  README.md  skaffold.yaml
machine-learning/kuberay-mlflow/k8s/: namespace.yaml
machine-learning/kuberay-mlflow/k8s/mlflow/: mlflow-pvc.yaml  mlflow-values.yaml
machine-learning/kuberay-mlflow/k8s/ray/: ray-service.yaml
machine-learning/kuberay-mlflow/k8s/redis/: redis-deployment.yaml
machine-learning/kuberay-mlflow/python/: Dockerfile  README.md  pyproject.toml
machine-learning/kuberay-mlflow/python/kuberay_mlflow/: __init__.py  distributed_train.py  serve.py
machine-learning/mcp-rag/: Makefile  skaffold.yaml
machine-learning/mcp-rag/k8s/: app-deployment.yaml  namespace.yaml  ollama-statefulset.yaml  postgres-statefulset.yaml
machine-learning/mcp-rag/python/: Dockerfile  pyproject.toml
machine-learning/mcp-rag/python/mcp_rag/: app.py  dependencies.py  ingest.py  schemas.py
machine-learning/mcp-rag/python/mcp_rag/core/: config.py  errors.py
machine-learning/mcp-rag/python/mcp_rag/db/: pool.py
machine-learning/mcp-rag/python/mcp_rag/services/: rag.py
machine-learning/ollama/: Makefile  README.md  skaffold.yaml
machine-learning/ollama/k8s/: api-deployment.yaml  namespace.yaml  ollama-statefulset.yaml
machine-learning/ollama/python/: Dockerfile  README.md  pyproject.toml
machine-learning/ollama/python/ollama_fastapi/: app.py
machine-learning/volcano/: Makefile  README.md
machine-learning/volcano/k8s/: ml-model-deployment.yaml  volcano-queue.yaml
machine-learning/volcano/python/: .dockerignore  Dockerfile  README.md  pyproject.toml
machine-learning/volcano/python/scripts/: test_localhost.py
machine-learning/volcano/python/volcano_fastapi/: app.py
