[project]
name = "kuberay-mlflow"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Foley",email = "alexandergfoley@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ray[serve,train] (>=2.52.1,<3.0.0)",
    "mlflow (>=3.7.0,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (==0.13.2)",
    "requests (>=2.32.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "fastapi (>=0.124.2,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
isort = "^7.0.0"
