[project]
name = "ollama-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Foley",email = "alexandergfoley@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.124.0,<0.125.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "ollama (>=0.6.1,<0.7.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
